# physical_ai_humanoid_robotics_book-hackathon

./: .gitignore  .markdownlint.json  .markdownlint.jsonc  CLAUDE.md  GEMINI.md  INTEGRATION_SUMMARY.md  PR_DESCRIPTION.md  PR_DESCRIPTION_FINAL.md  PR_DESCRIPTION_MAINPY.md  PR_DESCRIPTION_PLAN.md  README.md  code-review-checklist.md  commit_message.txt  cspell.json  frontend_demo.html  pyproject.toml  quality-checks.md  test_backend.py
.claude/: settings.local.json
.gemini/: settings.json
.github/workflows/: docusaurus-build.yml  quality-checks.yml
.specify/memory/: constitution.md
backend/: .gitignore  README.md  __init__.py  main.py  pyproject.toml  quickstart.py  quickstart_no_emoji.py  requirements.txt  retrieve.py  urls.txt.example
backend/cli/: retrieve_cli.py
backend/config/: __init__.py  env_validation.py  qdrant_config.py
backend/core/: __init__.py  collection_validator.py  qdrant_connection.py
backend/docs/: retrieve.md
backend/examples/: __init__.py  example_usage.py
backend/models/: __init__.py  embedding.py  pipeline_validation.py  retrieval_result.py  similarity_query.py
backend/monitor/: __init__.py  health_monitor.py
backend/performance/: __init__.py  benchmarks.py
backend/src/: agent.py  config.py  health.py  main.py  retrieval.py  test_basic.py
backend/src/clients/: openai_client.py  qdrant_client.py
backend/src/middleware/: __init__.py  validation_middleware.py
backend/src/models/: __init__.py  base_models.py  request_models.py  response_models.py
backend/src/utils/: embeddings.py
backend/tests/: test_health_monitor.py  test_integration.py  test_pipeline_validation.py  test_retrieve.py  test_similarity_search.py
backend/utils/: __init__.py  performance.py  validation.py
book-backend/: .dockerignore  Dockerfile  requirements.txt
book-backend/app/: main.py
book-backend/app/api/: chat.py  embeddings.py  query.py  store.py
book-backend/app/db/: postgres.py  qdrant.py
book-backend/app/models/: schemas.py
book-backend/app/schemas/: models.py
book-backend/tests/: test_api.py  test_integration.py
code-examples/fastapi-demo/: vla_pipeline_concept.md
code-examples/ros2-pkg/: isaac_ros_concepts.md  publisher_subscriber_pseudo.py
code-examples/urdf-models/: simple_robot.urdf
docusaurus/docs/: chat-interface-implementation.md
docusaurus/src/components/: ChatInterface.css  ChatInterface.jsx
docusaurus/src/pages/: chat-demo.jsx
docusaurus/src/services/: api.js  session.js
docusaurus/src/types/: chat.d.ts
docusaurus/src/utils/: textSelection.js
history/adr/: 0001-ros-2-version-selection.md  0002-simulation-toolchain-selection.md  0003-repository-structure.md  0004-content-format-mdx-vs-markdown.md  0005-code-formatting-and-style-guide.md  0006-website-publishing-platform.md  0007-backend-technology-for-api-demos.md  0008-scope-of-nodejs-usage.md
history/prompts/002-course-ai-chat-widget/: 0001-implementation-plan-course-ai-chat-widget.plan.prompt.md  0002-task-generation-course-ai-chat-widget.tasks.prompt.md  0003-mvp-implementation-phase1-3.green.prompt.md
history/prompts/003-hero-image-responsiveness/: 0001-create-hero-image-responsiveness-spec.spec.prompt.md  0002-create-hero-image-responsiveness-plan.plan.prompt.md  0003-create-hero-image-responsiveness-tasks.tasks.prompt.md  0004-implement-hero-image-responsiveness.green.prompt.md
history/prompts/004-homepage-overhaul/: 0001-homepage-overhaul-specification.spec.prompt.md  0002-add-markdownlint-config.misc.prompt.md
history/prompts/005-fix-hero-responsive/: 001-create-spec-hero-responsive.spec.prompt.md  002-plan-hero-responsive-css-fix.plan.prompt.md  003-generate-tasks-hero-responsive.tasks.prompt.md  004-implement-hero-responsive-css-fix.green.prompt.md  005-commit-push-hero-fix.misc.prompt.md
history/prompts/006-rag-embeddings-pipeline/: 001-rag-embeddings-pipeline-spec.spec.prompt.md  002-rag-embeddings-pipeline-planning.plan.prompt.md  003-rag-embeddings-pipeline-tasks.tasks.prompt.md  004-rag-embeddings-pipeline-implementation.green.prompt.md  005-rag-pipeline-planning-continuation.plan.prompt.md  (+2 more)
research/: research.md
robotic-book/: .markdownlint.json  .npmignore  cspell.json  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
robotic-book/docs/: intro.md  references.mdx  safety-guidelines.mdx
scripts/: content_ingestion.py
simulations/gazebo-worlds/: simple_world.sdf
specs/001-hero-video-ui/: spec.md
specs/001-homepage-content-section/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-rag-chatbot-frontend-integration/: plan.md  spec.md  tasks.md
specs/002-course-ai-chat-widget/: data-model.md  plan.md  quickstart.md  research.md  tasks.md
specs/003-hero-image-responsiveness/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-homepage-overhaul/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-fix-hero-responsive/: plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-rag-chatbot-ui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-rag-embeddings-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-blue-theme-styling/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-floating-chatbot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-qdrant-retrieval-testing/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-rag-chatbot/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-robotics-book-spec/: plan.md  spec.md  tasks.md
specs/2-course-ai-chat-widget/: spec.md
specs/2-rag-agent-openai-fastapi/: plan.md  spec.md  tasks.md
specs/2-rag-backend-url-update/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/docusaurus-config-update/: tasks.md
(+128 files in other folders)
