[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "physical-ai-humanoid-robotics-book-hackathon"
description = "Physical AI & Humanoid Robotics Book - Hackathon Project"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["ai", "robotics", "humanoid", "physical-ai", "ros2", "gazebo", "qdrant", "rag"]
license = {text = "MIT"}
authors = [
    {name = "Abrar Rizvi", email = "abrar8949@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["version"]

dependencies = [
    "qdrant-client>=1.16.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.21.0",
    "requests>=2.25.0",
    "cohere>=5.0.0",
    "langchain-text-splitters>=1.0.0",
    "tiktoken>=0.12.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "pytest>=7.0.0",
    "torch>=2.0.0",
    "transformers>=4.21.0",
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.0",
    "python-multipart>=0.0.6",
    "uvicorn>=0.18.0",
    "fastapi>=0.100.0",
]

[project.optional-dependencies]
dev = [
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "pre-commit>=2.20.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.21.0",
    "pytest-benchmark>=4.0.0",
]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.20.0",
]
simulation = [
    "gymnasium>=0.29.0",
    "stable-baselines3>=2.0.0",
    "ray[rllib]>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/Abrar-Rizvi/physical_ai_humanoid_robotics_book-hackathon"
Repository = "https://github.com/Abrar-Rizvi/physical_ai_humanoid_robotics_book-hackathon"

[project.scripts]
qdrant-retrieve = "backend.cli.retrieve_cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "robotic-book*"]

[tool.setuptools.dynamic]
version = {attr = "robotic_book.__version__"}

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["backend/tests", "tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "slow: marks tests as slow",
    "hardware: marks tests that require hardware",
    "simulation: marks tests that require simulation environment",
]